# traditional_gomoku

./: .gitignore  CMakeLists.txt  GomokuAI.spec  README.md  build_extension.py  guidebook.md  main.py  pyproject.toml
gomoku/: __init__.py  _gomoku_core.cp312-win_amd64.pyd  app.py  board_ui.py  client_online.py  server.py
installer/: gomoku-server.service  setup.iss
src/: bindings.cpp  board.cpp  board.h  evaluator.cpp  evaluator.h  game.cpp  game.h  main.cpp  movegen.cpp  movegen.h  pattern.cpp  pattern.h  resource.rc  search.cpp  search.h  threat.cpp  threat.h  transposition.cpp  transposition.h  ui.cpp  ui.h  ui_win.cpp  ui_win.h
